syntax = "proto3";

package org.brewchain.cwv.common.service;

enum PChainModule {
	CHN = 0;
};
enum PChainCommand {
	CPT = 0;
	QAI = 1;
	QAB = 2;
};


message ReqAddCryptoToken {
    string hexAddress = 1;
    repeated string hexHash = 2; // Token鐨刪ash锛宧ash(index,total,code,name,timestamp)
    repeated int64 timestamp = 3; // Token鍒涘缓鏃堕棿
    repeated int32 index = 4; // 璇oken鍙戣鏃剁殑绱㈠紩
    repeated int32 total = 5; // 璇oken鐨勫彂琛屾�绘暟閲�
    repeated string code = 6; // Token鐨勭紪鍙�
    repeated string name = 7; // Token鐨勫悕绉�
    repeated string symbol = 8;
}

message RespAddCryptoToken {
    int32 retCode = 1;
    int32 total = 2;
}

message ReqCreateAccount{

	string count = 1;
	string address = 2;
}

message RespCreateAccount{
	string pubkey = 1;
	string prikey = 2;
	string address = 3;
	string bcuid = 4;
}

message AccountCryptoToken {
    bytes hash = 1; // Token鐨刪ash锛宧ash(index,total,code,name,timestamp)
    int64 timestamp = 2; // Token鍒涘缓鏃堕棿
    int32 index = 3; // 璇oken鍙戣鏃剁殑绱㈠紩
    int32 total = 4; // 璇oken鐨勫彂琛屾�绘暟閲�
    string code = 5; // Token鐨勭紪鍙�
    string name = 6; // Token鐨勫悕绉�
    bytes owner = 7; // 鎵�鏈変汉鐨勮处鎴峰湴鍧�
    int32 nonce = 8; // 浜ゆ槗娆℃暟
    int64 ownertime = 9; // 鎵�鏈変汉鑾峰彇鏃堕棿
}